[gd_scene load_steps=7 format=3 uid="uid://dwufagvacdn0g"]

[ext_resource type="Script" uid="uid://c62njcvsi1doy" path="res://scripts/menu_script.gd" id="1_yqeox"]
[ext_resource type="FontFile" uid="uid://dfmjcjst22m5r" path="res://assets/fonts/alagard.ttf" id="2_vjb58"]
[ext_resource type="FontFile" uid="uid://b2duawo6i6gd8" path="res://assets/fonts/ModernDOS8x16.ttf" id="3_con2f"]

[sub_resource type="Gradient" id="Gradient_mhnvy"]
colors = PackedColorArray(0, 0, 0, 1, 0.09803922, 0.039215688, 0.13725491, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4ytvr"]
gradient = SubResource("Gradient_mhnvy")
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)
metadata/_snap_enabled = true

[sub_resource type="LabelSettings" id="LabelSettings_con2f"]
font = ExtResource("2_vjb58")
font_size = 91
outline_size = 21
outline_color = Color(0.23952416, 0.1475111, 0.34694287, 1)
shadow_size = 21
shadow_color = Color(0.003921569, 0.003921569, 0.003921569, 0.14509805)

[node name="menu" type="Node2D"]
script = ExtResource("1_yqeox")

[node name="menu_background" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1150.0
offset_bottom = 650.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_4ytvr")

[node name="menu_game_title" type="Label" parent="."]
offset_left = 64.0
offset_top = 64.0
offset_right = 1087.0
offset_bottom = 190.0
text = "That night at Wolfstreet"
label_settings = SubResource("LabelSettings_con2f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="menu_buttons_container" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(303, 0)
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 424.0
offset_top = 240.0
offset_right = 727.0
offset_bottom = 588.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="start_button" type="Button" parent="menu_buttons_container"]
custom_minimum_size = Vector2(303, 72)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_con2f")
theme_override_font_sizes/font_size = 20
text = "Start Game"

[node name="options_button" type="Button" parent="menu_buttons_container"]
custom_minimum_size = Vector2(303, 72)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_con2f")
theme_override_font_sizes/font_size = 20
text = "Options"

[node name="tutorial_button" type="Button" parent="menu_buttons_container"]
custom_minimum_size = Vector2(303, 72)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_con2f")
theme_override_font_sizes/font_size = 20
text = "Tutorial"

[node name="exit_button" type="Button" parent="menu_buttons_container"]
custom_minimum_size = Vector2(303, 72)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_con2f")
theme_override_font_sizes/font_size = 20
text = "Exit Game"

[connection signal="pressed" from="menu_buttons_container/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="menu_buttons_container/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="menu_buttons_container/tutorial_button" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="menu_buttons_container/exit_button" to="." method="_on_exit_button_pressed"]
